Added the navbar

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-First Commit
+<!DOCTYPE html>
+<html>
+<head>
+	<title> Sean Johnson </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8"/>
+	<link rel="stylesheet" type="text/css" href="navbar.css"\>
+</head>
+<body>
+	<!-- navigation bar -->
+	<div id="navbar"> 
+		<li> <a class="nav-button" href="pigcoder3.github.io">Home</a> </li>
+		<li> <a class="nav-button" href="contact.html">Contact</a> </li>
+		<li> <a class="nav-button" href="about.html">About</a> </li>
+		<li> <a class="nav-button" href="projects.html">Projects</a> </li>
+	</div>
+	<!-- page body -->
+</body>
+</html>
