removed dead links

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 	</div>
 	<!-- navigation bar -->	
 	<div id="navbar"> 
-			<a class="nav-button" href="projects.html">Projects</a>
-			<a class="nav-button" href="pigcoder3.github.io">Home</a>
-			<a class="nav-button" href="contact.html">Contact</a>
+			<a class="nav-button" href="#">Projects</a>
+			<a class="nav-button" href="https://pigcoder3.github.io/">Home</a>
+			<a class="nav-button" href="#">Contact</a>
 	</div>
 	<div id="spacer"> </div>
 	<!-- page body -->
