--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 			<div class="content_container project_container right_project">
 				<a href="sub_trouble.html">
 					<img src="sub_trouble.png"/>
-					<span class="project_name">Sub Strouble</span>
+					<span class="project_name">Sub Trouble</span>
 				</a>
 			</div>
 			<div class="content_container project_container left_project">
