projects are now centered on smaller screens

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 
 		@media(max-width: 750px) {
 			.project_container {
-				width: 40%;
+				width: 100%;
 				max-height: 175px;
-				max-width: 175%;
+				max-width: 100%;
 				min-width: 200px;
 				margin: 50px auto;
 				display: block;
@@ -164,8 +164,10 @@
 		#projects {
 			max-height 175px;
 			margin: 0 auto;
+			min-width: 200px;
 			width: 50%;
 			display: flex;
+			text-align: center;
 			flex-wrap: wrap;
 		}
 
@@ -233,7 +235,6 @@
 				</a>
 			</div>
 		</div>
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 	</div>
 </body>
 </html>
