Changed the projects link to a dropdown

--- a/index.html
+++ b/index.html
@@ -186,9 +186,23 @@
 	</div>
 	<!-- navigation bar -->	
 	<div id="navbar"> 
-			<a class="nav-button" href="#">Projects</a>
+		<div id="projects-dropdown">
+			<span class="nav-button" href="#">Projects</span>
+			<div id="projects-dd-content">	
+				<a class="project-link" href="dodger/dodger.html">Dodger</a>	
+				<a class="project-link" href="subtrouble/subtrouble.html">SubTrouble</a>
+				<a class="project-link" href="minesweeper/minesweeper.html">Minesweeper</a>
+				<a class="project-link" href="tetris/tetris.html">Tetris</a>
+				<a class="project-link" href="talk/talk.html">Talk</a>
+			</div>
+		</div>
+		<div>
 			<a class="nav-button" href="https://pigcoder3.github.io/">Home</a>
+		</div>
+		<div>
 			<a class="nav-button" href="#">Contact</a>
+		</div>
+
 	</div>
 	<div id="spacer"> </div>
 	<!-- page body -->
@@ -197,7 +211,7 @@
 		<div class="content_container" id="intro">
 			<a href="https://github.com/pigcoder3"> <img id="profile" src="github-profile.png" alt="github profile"\> </a>
 			<span id="desc">
-				Sean is a current high school student who programs for fun when he is not studying for class. He is moderatley fluent in Java, C, Python, and Bash.
+				Sean is a current high school student who programs as a hobby. He is moderatley fluent in Java, C, Python, and Bash.
 			</span>
 		</div>
 		
@@ -205,32 +219,32 @@
 		<h2 id="projects_header"> Projects </h2>
 		<div id="projects">
 			<div class="content_container project_container left_project">
-				<a href="dodger.html">
-					<img src="dodger.png"/>
+				<a href="dodger/dodger.html">
+					<img src="dodger/dodger.png"/>
 					<span class="project_name">Dodger</span>
 				</a>
 			</div>
 			<div class="content_container project_container right_project">
-				<a href="sub_trouble.html">
-					<img src="sub_trouble.png"/>
+				<a href="sub_trouble/sub_trouble.html">
+					<img src="sub_trouble/sub_trouble.png"/>
 					<span class="project_name">Sub Strouble</span>
 				</a>
 			</div>
 			<div class="content_container project_container left_project">
-				<a href="minesweeper.html">
-					<img src="minesweeper.png"/>
+				<a href="minesweeper/minesweeper.html">
+					<img src="minesweeper/minesweeper.png"/>
 					<span class="project_name">Minesweeper</span>
 				</a>
 			</div>
 			<div class="content_container project_container right_project">
-				<a href="tetris.html">
-					<img src="tetris.png"/>
+				<a href="tetris/tetris.html">
+					<img src="tetris/tetris.png"/>
 					<span class="project_name">Tetris</span>
 				</a>
 			</div>
 			<div class="content_container project_container left_project">
-				<a href="talk.html">
-					<img src="talk.png"/>
+				<a href="talk/talk.html">
+					<img src="talk/talk.png"/>
 					<span class="project_name" style="color: white">Talk</span>
 				</a>
 			</div>
