--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 			top: 50%;
 			left: 50%;
 			transform: translateX(-50%) translateY(-50%) ;
+			filter: grayscale(50%);
 		}
 
 		#projects {
