Fixed embarrassing typo

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 		<div class="content_container" id="intro">
 			<a href="https://github.com/pigcoder3"> <img id="profile" src="github-profile.png" alt="github profile"\> </a>
 			<span id="desc">
-				I program for fun when I'm not overloaded with work from my high school classes. I am moderatley fluent in Java, C, Python, and Bash.
+				I program for fun when I'm not overloaded with work from my high school classes. I am moderately fluent in Java, C, Python, and Bash.
 			</span>
 		</div>
 		
