Fixed embarrassing typo

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 			<div class="content_container project_container">
 				<a href="sub_trouble/sub_trouble.html">
 					<div class="project-desc-container">
-						<span class="project_name">Sub Strouble</span>
+						<span class="project_name">Sub Trouble</span>
 						<span class="project_desc">Sea Defense</span>
 					</div>
 					<img src="sub_trouble/sub_trouble.png"/>
