--- a/index.html
+++ b/index.html
@@ -1,244 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title> Sean Johnson </title>
-	<meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8"/>
-	<link rel="stylesheet" type="text/css" href="navbar.css"\>
-	<script type= "text/javascript" src="stickynav.js"> </script>
-	<style>
-
-		body {
-			background-color: rgb(240,240,240);
-			margin: 0px;
-		}
-
-		#name {
-			margin: 0px;
-			padding: 20px;
-			background-color: rgb(100,100,100);
-			text-align: center;
-			font-family: courier new, monospace;
-		}
-
-		#primary {
-			padding: 20px;
-		}
-
-		@media(max-width:750px) {
-
-			#intro {		
-				width: 75%;
-				margin: 50px auto;
-				position: relative;
-			}
-			
-			#profile {
-				margin: 0 auto;	
-				padding: 10px;
-				border-radius: 30px;
-				width: 60px;
-				height: 60px;
-				display: block;
-			}
-
-			#desc {
-				font-family: verdana, sans-serif;
-				display: block;
-				padding: 10px;
-			}
-		}
-
-		@media(min-width:750px) {
-
-			#intro {
-				width: 50%;
-				margin: 50px auto;
-				display: flex;
-				position: relative;
-			}
-
-			#profile {
-				margin: auto 0;	
-				padding: 20px;
-				border-radius: 60px;
-				width: 60px;
-				height: 60px;
-			}
-
-			#desc {
-				padding: 20px;
-				font-family: verdana, sans-serif;
-				margin: auto 0;	
-			}
-		}
-
-		.content_container {
-			border-radius: 5px;
-			border: 1px solid black;
-			background-color: white;
-		}
-
-		.content_container:hover {
-			background-color: rgb(250,250,250);
-		}
-
-		@media(min-width: 750px) {
-			.project_container {
-				width: 40%;
-				max-height: 175px;
-				max-width: 40%;
-				min-width: 200px;
-				margin: 50px auto;
-				display: inline;
-				overflow: hidden;
-				position: relative;
-				text-align: center;
-			}
-			
-			.project_container a img:hover {
-				width: 110%;
-				height: auto;
-			}
-
-		}
-
-		@media(max-width: 1000px) {
-			.project_container {
-				width: 100%;
-				max-height: 175px;
-				max-width: 100%;
-				min-width: 200px;
-				margin: 50px auto;
-				display: block;
-				overflow: hidden;
-				position: relative;
-				text-align: center;
-			}
-
-			.project_container a img:hover {
-				width: 110%;
-				height: auto;
-			}
-			
-		}
-
-		.project_name {
-			font-family: verdana, sans-serif;
-			text-decoration: none;
-			color: black;
-			font-size: 20px;
-			left: 5px;
-			position: absolute;
-			/* vertically align */
-			top: 50%;
-			transform: translateY(-50%);
-		}
-	
-		@media(min-width:1000px) {	
-			.project-desc-container {
-				min-height: 40px;
-				position: absolute;
-				bottom: 0px;
-				width: 100%;
-				z-index: 10;
-				background-color: rgb(200,200,200,0.5);
-			}
-		
-			.project_desc {
-				font-family: verdana, sans-serif;
-				text-decoration: none;
-				color: black;
-				font-size: 15px;
-				right: 5px;
-				position: absolute;
-				/* vertically align */
-				top: 50%;
-				transform: translateY(-50%);
-			}
-
-			.project_container a img {
-				vertical-align: top;
-				position: relative;
-				width: 100%;
-				height: auto;
-				top: 50%;
-				left: 50%;
-				transform: translateX(-50%) translateY(-50%) ;
-			}
-		}
-		
-		@media(max-width:1300px) {	
-			.project-desc-container {
-				min-height: 40px;
-				position: absolute;
-				bottom: 0px;
-				width: 100%;
-				z-index: 1;
-				background-color: rgb(200,200,200,0.5);
-				display: block;
-			}
-		
-			.project_desc {
-				display: none;	
-			}
-
-			.project_container a img {
-				vertical-align: top;
-				position: relative;
-				width: 100%;
-				height: auto;
-				top: 50%;
-				left: 50%;
-				transform: translateX(-50%) translateY(-50%) ;
-			}
-		}
-
-		#projects {
-			max-height 175px;
-			margin: 0 auto;
-			min-width: 200px;
-			width: 50%;
-			display: flex;
-			text-align: center;
-			flex-wrap: wrap;
-		}
-
-		#projects_header {
-			text-align: center;
-			font-family: verdana, sans-serif;
-		}
-
-
-	</style>
-</head>
-<body>
-	<!-- name -->
-	<div>
-		<h1 id="name">Sean Johnson</h1>	
-	</div>
-	<!-- navigation bar -->	
-	<div id="navbar"> 
-		<div id="projects-dropdown" class="nav">
-			<button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
-			<div class="projects-dd-content" id="dropdown-content">	
-				<a class="project-link" href="dodger/dodger.html">Dodger</a>	
-				<a class="project-link" href="subtrouble/subtrouble.html">SubTrouble</a>
-				<a class="project-link" href="minesweeper/minesweeper.html">Minesweeper</a>
-				<a class="project-link" href="tetris/tetris.html">Tetris</a>
-				<a class="project-link" href="talk/talk.html">Talk</a>
-			</div>
-		</div>
-		<div class="nav">
-			<a class="nav-button" href="https://pigcoder3.github.io/">Home</a>
-		</div>
-		<div class="nav">
-			<a class="nav-button" href="#">Contact</a>
-		</div>
-
-	</div>
-	<div id="spacer"> </div>
-	<script>
-		function toggle() {
+  <head>
+    <title>Sean Johnson</title>
+    <meta name="viewport" content="width=device-width" charset="UTF-8"></meta>
+    <script type="text/javascript" src="stickynav.js"></script>
+    <link rel="stylesheet" href="navbar.css"></link>
+    <link rel="stylesheet" href="index.css"></link>
+  </head>
+  <body>
+    <div>
+      <h1 id="name">Sean Johnson</h1>
+    </div>
+    <div id="navbar">
+      <div id="projects-dropdown" class="nav">
+        <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
+        <div class="projects-dd-content" id="dropdown-content">
+          <a class="project-link" href="dodger/dodger.html">dodger</a>
+          <a class="project-link" href="tetris/tetris.html">tetris</a>
+          <a class="project-link" href="minesweeper/minesweeper.html">minesweeper</a>
+          <a class="project-link" href="sub_trouble/sub_trouble.html">sub_trouble</a>
+          <a class="project-link" href="talk/talk.html">talk</a>
+        </div>
+      </div>
+      <div class="nav">
+        <a class="nav-button" href="https://pigcoder3.github.io/">Home</a>
+      </div>
+      <div class="nav">
+        <a class="nav-button" href="#">Contact</a>
+      </div>
+    </div>
+    <div id="spacer"></div>
+    <script>function toggle() {
 			var e = document.getElementById("dropdown-content");
 			e.classList.toggle("projects-dd-content-shown");
 		}
@@ -247,68 +39,62 @@
   			if (!event.target.matches("projects-dropdown-button")) {
 				e.classList.toggle("projects-dd-content-shown");
     		}
-  		}
-	</script>
-	<!-- page body -->
-	<div id="primary">
-		<!-- intro -->
-		<div class="content_container" id="intro">
-			<a href="https://github.com/pigcoder3"> <img id="profile" src="github-profile.png" alt="github profile"\> </a>
-			<span id="desc">
-				I program for fun when I'm not overloaded with work from my high school classes. I am moderately fluent in Java, C, Python, and Bash.
-			</span>
-		</div>
-		
-		<!-- Projects -->
-		<h2 id="projects_header"> Projects </h2>
-		<div id="projects">
-			<div class="content_container project_container">
-				<a href="dodger/dodger.html">
-					<div class="project-desc-container">
-						<span class="project_name">Dodger</span>
-						<span class="project_desc">Fast-paced Survival</span>
-					</div>
-					<img src="dodger/dodger.png"/>
-				</a>
-			</div>
-			<div class="content_container project_container">
-				<a href="sub_trouble/sub_trouble.html">
-					<div class="project-desc-container">
-						<span class="project_name">Sub Trouble</span>
-						<span class="project_desc">Sea Defense</span>
-					</div>
-					<img src="sub_trouble/sub_trouble.png"/>
-				</a>
-			</div>
-			<div class="content_container project_container">
-				<a href="minesweeper/minesweeper.html">
-					<div class="project-desc-container">
-						<span class="project_name">Minesweeper</span>
-						<span class="project_desc">Classic Puzzler</span>
-					</div>
-					<img src="minesweeper/minesweeper.png"/>
-
-				</a>
-			</div>
-			<div class="content_container project_container">
-				<a href="tetris/tetris.html">
-					<div class="project-desc-container">
-						<span class="project_name">Tetris</span>
-						<span class="project_desc">Fast-paced Classic</span>
-					</div>
-					<img src="tetris/tetris.png"/>
-				</a>
-			</div>
-			<div class="content_container project_container">
-				<a href="talk/talk.html">
-					<div class="project-desc-container">
-						<span class="project_name" style="color: white">Talk</span>
-						<span class="project_desc" style="color: white">Client/Server Chat</span>
-					</div>
-					<img src="talk/talk.png"/>
-				</a>
-			</div>
-		</div>
-	</div>
-</body>
+  		}</script>
+    <div id="primary">
+      <div class="content_container" id="intro">
+        <a href="https://github.com/pigcoder3">
+          <img id="profile" src="github-profile.png" alt="github profile"></img>
+        </a>
+        <span id="desc">I program for fun when I'm not overloaded with work from my high school classes. I am moderately fluent in Java, C, Python, and Bash.</span>
+      </div>
+      <h2 id="projects_header">Projects</h2>
+      <div id="projects">
+        <div class="content_container project_container">
+          <a href="dodger/dodger.html">
+            <div class="project-desc-container">
+              <span class="project_name">Dodger</span>
+              <span class="project_desc">Fast-paced survival</span>
+            </div>
+            <img src="dodger/dodger.png"></img>
+          </a>
+        </div>
+        <div class="content_container project_container">
+          <a href="tetris/tetris.html">
+            <div class="project-desc-container">
+              <span class="project_name">Tetris</span>
+              <span class="project_desc">Fast-paced Classic</span>
+            </div>
+            <img src="tetris/tetris.png"></img>
+          </a>
+        </div>
+        <div class="content_container project_container">
+          <a href="minesweeper/minesweeper.html">
+            <div class="project-desc-container">
+              <span class="project_name">Minesweeper</span>
+              <span class="project_desc">Classic Puzzler</span>
+            </div>
+            <img src="minesweeper/minesweeper.png"></img>
+          </a>
+        </div>
+        <div class="content_container project_container">
+          <a href="sub_trouble/sub_trouble.html">
+            <div class="project-desc-container">
+              <span class="project_name">Sub Trouble</span>
+              <span class="project_desc">Sea-Based Defense</span>
+            </div>
+            <img src="sub_trouble/sub_trouble.png"></img>
+          </a>
+        </div>
+        <div class="content_container project_container">
+          <a href="talk/talk.html">
+            <div class="project-desc-container">
+              <span class="project_name">Talk</span>
+              <span class="project_desc">Client/Server Chat</span>
+            </div>
+            <img src="talk/talk.png"></img>
+          </a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
