Fixing typos in the page generator

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <div id="projects-dropdown" class="nav">
         <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
         <div class="projects-dd-content" id="dropdown-content">
-          <a class="project-link" href="dodger/dodger.html">dodger</a>
-          <a class="project-link" href="tetris/tetris.html">tetris</a>
-          <a class="project-link" href="minesweeper/minesweeper.html">minesweeper</a>
-          <a class="project-link" href="sub_trouble/sub_trouble.html">sub_trouble</a>
-          <a class="project-link" href="talk/talk.html">talk</a>
+          <a class="project-link" href="https://pigcoder3.github.io/dodger/dodger.html">Dodger</a>
+          <a class="project-link" href="https://pigcoder3.github.io/tetris/tetris.html">Tetris</a>
+          <a class="project-link" href="https://pigcoder3.github.io/minesweeper/minesweeper.html">Minesweeper</a>
+          <a class="project-link" href="https://pigcoder3.github.io/sub_trouble/sub_trouble.html">Sub Trouble</a>
+          <a class="project-link" href="https://pigcoder3.github.io/talk/talk.html">Talk</a>
         </div>
       </div>
       <div class="nav">
