--- a/talk/talk.html
+++ b/talk/talk.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sean Johnson</title>
+    <title>Talk - Sean Johnson</title>
     <meta name="viewport" content="width=device-width" charset="UTF-8"></meta>
     <script type="text/javascript" src="../stickynav.js"></script>
     <link rel="stylesheet" href="../navbar.css"></link>
@@ -26,7 +26,7 @@
         <a class="nav-button" href="https://pigcoder3.github.io/">Home</a>
       </div>
       <div class="nav">
-        <a class="nav-button" href="#">Contact</a>
+        <a class="nav-button" href="https://pigcoder3.github.io/contact.html">Contact</a>
       </div>
     </div>
     <div id="spacer"></div>
@@ -67,6 +67,7 @@
           <div class="container-body">
             <ul>
               <li>Linux or MacOs</li>
+              <li>ncurses</li>
             </ul>
           </div>
         </div>
