--- a/minesweeper/minesweeper.html
+++ b/minesweeper/minesweeper.html
@@ -37,13 +37,13 @@
 
 		window.onclick = function(event) {
   			if (!event.target.matches("projects-dropdown-button")) {
-				e.classList.toggle("projects-dd-content-shown");
+				document.getElementsByClassName("projects-dropdown-button")[0].classList.toggle("projects-dd-content-shown");
     		}
   		}</script>
     <div id="primary">
       <h2 id="project-name">Minesweeper</h2>
       <div class="content-container" id="intro">
-        <a href="#">
+        <a href="https://github.com/pigcoder3/Minesweeper">
           <img id="project-img" src="minesweeper.png"></img>
         </a>
         <span id="project-desc">This game is a take on the classic minesweeper game. The player must flag all mines without uncovering a single one. If one is uncovered, the game is lost.</span>
@@ -70,6 +70,23 @@
             </ul>
           </div>
         </div>
+      </div>
+      <h2 id="gallery-header">Gallery</h2>
+      <div class="content-container" id="gallery">
+        <button id="left-button" class="gallery-button" onclick="goLeft()"> &lt; </button>
+        <div id="image-container">
+          <div id="image-number-container">
+            <span id="image-number">0 / 0</span>
+          </div>
+          <img class="gallery-image" href="https://pigcoder3.github.io/minesweeper/gallery/changingsize.png"></img>
+          <img class="gallery-image" href="https://pigcoder3.github.io/minesweeper/gallery/ingame.png"></img>
+          <img class="gallery-image" href="https://pigcoder3.github.io/minesweeper/gallery/gamover.png"></img>
+          <img class="gallery-image" href="https://pigcoder3.github.io/minesweeper/gallery/gamewon.png"></img>
+          <img class="gallery-image" href="https://pigcoder3.github.io/minesweeper/gallery/paused.png"></img>
+          <span id="no-images">It looks like we have no images for this project</span>
+        </div>
+        <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
+        <script type="text/javascript" src="../gallery.js"></script>
       </div>
     </div>
   </body>
