--- a/sub_trouble/sub_trouble.html
+++ b/sub_trouble/sub_trouble.html
@@ -37,13 +37,13 @@
 
 		window.onclick = function(event) {
   			if (!event.target.matches("projects-dropdown-button")) {
-				e.classList.toggle("projects-dd-content-shown");
+				document.getElementsByClassName("projects-dropdown-button")[0].classList.toggle("projects-dd-content-shown");
     		}
   		}</script>
     <div id="primary">
       <h2 id="project-name">Sub Trouble</h2>
       <div class="content-container" id="intro">
-        <a href="#">
+        <a href="https://github.com/pigcoder3/Submarine-Trouble/releases">
           <img id="project-img" src="sub_trouble.png"></img>
         </a>
         <span id="project-desc">Submarine Trouble is a game that is set on an ocean. The player controls a destroyer and must defend him/herself from the enless wave of submarines lurking below, while they attack with accurate torpedoes. The only weapons provided are depth charges with a small damage radius. Survive for as long as possible.</span>
@@ -70,6 +70,22 @@
             </ul>
           </div>
         </div>
+      </div>
+      <h2 id="gallery-header">Gallery</h2>
+      <div class="content-container" id="gallery">
+        <button id="left-button" class="gallery-button" onclick="goLeft()"> &lt; </button>
+        <div id="image-container">
+          <div id="image-number-container">
+            <span id="image-number">0 / 0</span>
+          </div>
+          <img class="gallery-image" href="https://pigcoder3.github.io/sub_trouble/gallery/attacking.png"></img>
+          <img class="gallery-image" href="https://pigcoder3.github.io/sub_trouble/gallery/home.png"></img>
+          <img class="gallery-image" href="https://pigcoder3.github.io/sub_trouble/gallery/difficulties.png"></img>
+          <img class="gallery-image" href="https://pigcoder3.github.io/sub_trouble/gallery/attacked.png"></img>
+          <span id="no-images">It looks like we have no images for this project</span>
+        </div>
+        <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
+        <script type="text/javascript" src="../gallery.js"></script>
       </div>
     </div>
   </body>
