fixed image sizing

--- a/dodger/dodger.html
+++ b/dodger/dodger.html
@@ -78,12 +78,12 @@
           <div id="image-number-container">
             <span id="image-number">0 / 0</span>
           </div>
-          <img class="gallery-image" href="https://pigcoder3.github.io/dodger/gallery/ingame.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/dodger/gallery/home.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/dodger/gallery/difficulties.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/dodger/gallery/Player_Lost.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/dodger/gallery/start.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/dodger/gallery/Paused.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/dodger/gallery/ingame.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/dodger/gallery/home.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/dodger/gallery/difficulties.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/dodger/gallery/Player_Lost.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/dodger/gallery/start.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/dodger/gallery/Paused.png"></img>
           <span id="no-images">It looks like we have no images for this project</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
