--- a/minesweeper/minesweeper.html
+++ b/minesweeper/minesweeper.html
@@ -78,11 +78,11 @@
           <div id="image-number-container">
             <span id="image-number">0 / 0</span>
           </div>
-          <img class="gallery-image" href="https://pigcoder3.github.io/minesweeper/gallery/changingsize.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/minesweeper/gallery/ingame.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/minesweeper/gallery/gamover.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/minesweeper/gallery/gamewon.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/minesweeper/gallery/paused.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/minesweeper/gallery/changingsize.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/minesweeper/gallery/ingame.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/minesweeper/gallery/gamover.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/minesweeper/gallery/gamewon.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/minesweeper/gallery/paused.png"></img>
           <span id="no-images">It looks like we have no images for this project</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
