--- a/sub_trouble/sub_trouble.html
+++ b/sub_trouble/sub_trouble.html
@@ -78,10 +78,10 @@
           <div id="image-number-container">
             <span id="image-number">0 / 0</span>
           </div>
-          <img class="gallery-image" href="https://pigcoder3.github.io/sub_trouble/gallery/attacking.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/sub_trouble/gallery/home.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/sub_trouble/gallery/difficulties.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/sub_trouble/gallery/attacked.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/sub_trouble/gallery/attacking.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/sub_trouble/gallery/home.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/sub_trouble/gallery/difficulties.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/sub_trouble/gallery/attacked.png"></img>
           <span id="no-images">It looks like we have no images for this project</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
