--- a/tetris/tetris.html
+++ b/tetris/tetris.html
@@ -78,13 +78,13 @@
           <div id="image-number-container">
             <span id="image-number">0 / 0</span>
           </div>
-          <img class="gallery-image" href="https://pigcoder3.github.io/tetris/gallery/ingame2.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/tetris/gallery/starting.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/tetris/gallery/juststarted.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/tetris/gallery/ingame.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/tetris/gallery/juststarted2.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/tetris/gallery/gameover.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/tetris/gallery/paused.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/tetris/gallery/ingame2.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/tetris/gallery/starting.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/tetris/gallery/juststarted.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/tetris/gallery/ingame.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/tetris/gallery/juststarted2.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/tetris/gallery/gameover.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/tetris/gallery/paused.png"></img>
           <span id="no-images">It looks like we have no images for this project</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
