--- a/talk/talk.html
+++ b/talk/talk.html
@@ -79,11 +79,11 @@
           <div id="image-number-container">
             <span id="image-number">0 / 0</span>
           </div>
-          <img class="gallery-image" href="https://pigcoder3.github.io/talk/gallery/userschatting.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/talk/gallery/userleftchat.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/talk/gallery/secretmessage.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/talk/gallery/bigmessage.png"></img>
-          <img class="gallery-image" href="https://pigcoder3.github.io/talk/gallery/scrollingthoughchat.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/userschatting.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/userleftchat.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/secretmessage.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/bigmessage.png"></img>
+          <img class="gallery-image" src="https://pigcoder3.github.io/talk/gallery/scrollingthoughchat.png"></img>
           <span id="no-images">It looks like we have no images for this project</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
